--- a/models_results/clearsky_cloudinessLabel/Clearsky_predictions_cloudiness_label.ipynb
+++ b/models_results/clearsky_cloudinessLabel/Clearsky_predictions_cloudiness_label.ipynb
@@ -178,7 +178,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jess/Desktop/IFT-6759/project1/official_repo/Solar-Irradiance-Prediction/models_results/clearsky_cloudinessLabel\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd models_results/clearsky_cloudinessLabel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +208,8 @@
     "        plt.ylabel('RMSE')\n",
     "        plt.grid(True)\n",
     "        plt.gca().set_xticklabels(Months)\n",
-    "        plt.plot(result[station])"
+    "        plt.plot(result[station])\n",
+    "        plt.savefig(f'GHI_{station}.png')"
    ]
   },
   {
@@ -225,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
