--- a/models_results/clearsky_cloudinessLabel/Clearsky_predictions_cloudiness_label.ipynb
+++ b/models_results/clearsky_cloudinessLabel/Clearsky_predictions_cloudiness_label.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
     "        rmse[station] = get_RMSE_forStations(np.array(clearsky_ghi), np.array(true_ghi))\n",
     "    return rmse\n",
     "\n",
-    "def get_RMSE_forAllStations_perMonths(stations, true_ghi, clearsky_ghi, cloudiness):\n",
+    "def get_RMSE_forAllStations_perMonths(stations, true_ghi, clearsky_ghi, cloudiness, penalize):\n",
     "    rmse = {}\n",
     "    for station in stations:\n",
     "        i = 1\n",
@@ -152,7 +152,8 @@
     "            tmp_true = true_ghi_2015[station].loc[index]\n",
     "            \n",
     "            if not(math.isnan(tmp_clearsky) or math.isnan(tmp_true)):\n",
-    "                tmp_clearsky = penalise(index, tmp_clearsky, cloudiness[station].loc[index])\n",
+    "                if penalize:\n",
+    "                    tmp_clearsky = penalise(index, tmp_clearsky, cloudiness[station].loc[index])\n",
     "                clearsky_ghi.append(tmp_clearsky)\n",
     "                true_ghi.append(tmp_true)\n",
     "                \n",
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,6 +210,20 @@
     "        plt.grid(True)\n",
     "        plt.gca().set_xticklabels(Months)\n",
     "        plt.plot(result[station])\n",
+    "        plt.savefig(f'GHI_{station}.png')\n",
+    "        \n",
+    "def gen_compare_graph(result, result_cloudy):\n",
+    "    Months = ['', 'Jan', 'Mar',  'May', 'Jul', 'Sep',  'Nov', 'Dec']\n",
+    "    for i, station in enumerate(Stations):\n",
+    "        plt.figure(i)\n",
+    "        plt.title(f\"RMSE at station {station}\")\n",
+    "        plt.xlabel('Months')\n",
+    "        plt.ylabel('RMSE')\n",
+    "        plt.grid(True)\n",
+    "        plt.gca().set_xticklabels(Months)\n",
+    "        plt.plot(result[station])\n",
+    "        plt.plot(result_cloudy[station])\n",
+    "        plt.legend('Clearsky RMSE', 'Clearsky with cloudiness RMSE')\n",
     "        plt.savefig(f'GHI_{station}.png')"
    ]
   },
@@ -234,11 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rmse_2015_months_cloudiness = get_RMSE_forAllStations_perMonths(Stations, true_ghi_2015, clearsky_ghi_2015, cloudiness_2015)"
+    "rmse_2015_months_cloudiness = get_RMSE_forAllStations_perMonths(Stations, true_ghi_2015, clearsky_ghi_2015, cloudiness_2015, True)\n",
+    "rmse_2015_months = get_RMSE_forAllStations_perMonths(Stations, true_ghi_2015, clearsky_ghi_2015, cloudiness_2015, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gen_compare_graph(rmse_2015_months, rmse_2015_months_cloudiness)"
    ]
   },
   {
